--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "ts-node-dev --respawn server/index.ts",
     "build:clean": "rm -rf ./dist/*; mkdir ./dist/logs;",
     "build:config": "cp ./src/config.json ./dist/config.json; cp ./package.json ./dist/package.json",
     "build": "tsc",
@@ -21,10 +21,20 @@
   "author": "Obed Nuertey",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-graphql": "^0.9.0",
+    "@types/graphql": "^14.5.0",
+    "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.9.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.6.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
